# petard

./: CMakeLists.txt  test_autograd  test_tensor
backend/wgpu/: wgpu_backend.c  wgpu_backend.h  wgpu_ops.c
backend/wgpu/shaders/: add.wgsl  add_heavy.wgsl  matmul.wgsl
backend/wgpu/tests/: test_wgpu_add.c  test_wgpu_matmul.c  test_wgpu_performance.c
core/src/: ops.c  registry.c
include/basednn/: tensor.h
include/petard/: autograd.h  layer.h  network.h  ops.h  petard.h  tensor.h
include/trebuchet/: autograd.h  layer.h  ops.h  trebuchet.h
src/: autograd.c  ops.c  optimizer.c  tensor.c
tests/full/: mnist.c  mnist_mlp.c  xor.c
tests/unit/: test_autograd.c  test_layer.c  test_network.c  test_ops.c  test_optimizer.c  test_tensor.c
